[package]
name = "megumax"
version = "0.3.0"
authors = ["boomber"]
edition = "2018"
description = "Simple CLI tool for search-and-replace across the entire project"
readme = "README.md"
repository = "https://github.com/oOBoomberOo/megumax"
license = "MIT"
keywords = ["megumin", "cli", "replace", "template"]
categories = ["command-line-utilities"]

[[bin]]
name = "megu"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
serde = { version = "1.0.116", features = ["derive"] }
toml = "0.5"
shellexpand = "2.0.0"
ignore = "0.4.16"
path-solver = { path = "./path-solver" }
anyhow = "1.0.32"
colorful = "0.2.1"
flexi_logger = "0.16.1"
log = "0.4.11"
thiserror = "1.0.20"
async-walkdir = { version = "0.2.0", optional = true }

[dependencies.futures]
version = "0.3.5"
optional = true

[dependencies.smol]
version = "1.2.2"
optional = true

[workspace]
members = ["./path-solver"]

[features]
default = ["async"]
async = ["smol", "futures", "async-walkdir"]

[dev-dependencies]
proptest = "0.10.1"
