[package]
name = "megumax-template"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"
license = "MIT / Apache-2.0"
repository = "https://github.com/oOBoomberOo/megumax"
description = "Template library for Megumax project"

[dependencies]
regex = "1.3.9"
thiserror = "1.0.20"
